--- a/style.css
+++ b/style.css
@@ -7213,7 +7213,7 @@ div.field div.field-items div.field-slideshow-wrapper ul.field-slideshow-pager{
   display: table;
   margin-right: auto;
   margin-left: auto;
-  background-color: #f4f4ec;
+  background-color: #eef4fa;
   border: 2px #EEE solid;
   margin-top: .8em;
   /*The following padding was added as a work around for section#block-system-main ul which couldn't be overriden*/
@@ -7233,23 +7233,28 @@ div.field div.field-items div.field-slideshow-wrapper ul.field-slideshow-pager{
 }
 .field-slideshow-slide {
   border: 2px #EEE solid;
-  background-color: #f4f4ec;
+  background-color: #eef4fa;
   padding-left: 2em;
   padding-right: 2em;
   margin-bottom: .2em;
 }
 .field-slideshow-caption{
-  font-size: .8em;
+  font-size: .9em;
   height: 100% !important;
+  margin-top: -0.8em;
   margin-bottom: .8em;
 }
 
 .field-slideshow-image {
   border: 2px #FFF solid;
   margin-top: .8em;
- 
+  margin-bottom: .8em;
 }
-
+.video-caption{
+  font-size: .9em;
+  margin-bottom: .8em;
+  text-align: center;
+}
 
 
 /*****************************************************************************************************************************************
@@ -7535,6 +7540,39 @@ cursor: default;
 	}
 }
 
+/* Drupal responsive video css style
+***********************************************************************/
+
+.flex-video {
+  position: relative;
+  padding-top: 25px;
+  padding-bottom: 67.5%;
+  height: 0;
+  margin-bottom: 16px;
+  overflow: hidden;
+}
+ .flex-video .video-embed-description{
+    float:left;
+    clear:right;
+ }
+
+.flex-video.widescreen { padding-bottom: 57.25%; }
+.flex-video.vimeo { padding-top: 0; }
+ 
+.flex-video iframe,
+.flex-video object,
+.flex-video embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+@media only screen and (max-device-width: 800px), only screen and (device-width: 1024px) and (device-height: 600px), only screen and (width: 1280px) and (orientation: landscape), only screen and (device-width: 800px), only screen and (max-width: 767px) {
+.flex-video { padding-top: 0; }
+}
+
+
 /* Drupal Admin Menu Overlay Fix
 ***********************************************************************/
 
@@ -7703,6 +7741,7 @@ body.page-node-add-business-cards div#bcard-preview div#left-group{
   margin-left: 19.22px;
   float: left;
   clear: left;
+  line-height: 10pt; /* fixes diff w Chrome & Firefox*/
 }
 
 body.page-node-edit.node-type-business-cards div#bcard-preview div#right-group,
@@ -7756,6 +7795,7 @@ body.page-node-add-business-cards div#bcard-preview div#bc-right-column{
   position: absolute;
   top: 53px;
   width: 200px;
+  line-height: 10pt; /* fixes diff w Chrome & Firefox*/
 }
 
 body.page-node-edit.node-type-business-cards div#bcard-preview div#p-right-title-group,
